General update. Added additional software, and splash screen configuration.

--- a/core/gui/i3.config
+++ b/core/gui/i3.config
@@ -25,12 +25,18 @@ exec fcitx
 bindsym XF86MonBrightnessUp exec sh /etc/scripts/bright.sh inc
 bindsym XF86MonBrightnessDown exec sh /etc/scripts/bright.sh dec 
 
+#Set wallpaper
+exec feh --bg-fill --randomize ~/media/images/wallpapers
+
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# added wallpaper resource
+exec --no-startup-id xss-lock -v --transfer-sleep-lock -- i3lock --nofork -i "/home/cardinal/media/images/wallpapers/1607414122488.png"
+#screenlock key
+bindsym $mod+Shift+p exec i3lock --nofork -i "/home/cardinal/media/images/wallpapers/1607414122488.png"
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
